--- a/BooksClient/Html/myLibrary.html
+++ b/BooksClient/Html/myLibrary.html
@@ -39,6 +39,7 @@
                         <th>Type</th>
                         <th>Link</th>
                         <th>Action</th>
+                        <th>Read on the website</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -55,6 +56,7 @@
                         <th>Type</th>
                         <th>Link</th>
                         <th>Action</th>
+                        <th>Read on the website</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -71,7 +73,7 @@
                         <th>Type</th>
                         <th>Link</th>
                         <th>Action</th>
-                        <th>Put book for sale</th>
+                        <th>Read on the website</th>
                     </tr>
                 </thead>
                 <tbody>
