--- a/BooksClient/Html/AuthorsBooks.html
+++ b/BooksClient/Html/AuthorsBooks.html
@@ -4,20 +4,38 @@
     <meta charset="utf-8">
     <title>Author books</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <!--<link href="../Css/AuthorDesign.css" rel="stylesheet" />-->
     <link href="../Css/AuthorBooksDesign.css" rel="stylesheet" />
+    <link href="../Css/PrevNav.css" rel="stylesheet" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <button id="GoHomeBtn" class="btn btn-primary">Home</button>
-    <!--<main id="Authors-Books-list" class="container"></main>-->
+    <div style=" display:flex; justify-content:space-between; flex-direction:row;">
+        <h1>Hello</h1>
+        <a class="goBackButton" href="index.html">Go back</a>
+    </div>
     <h1 class="page-title">Author Name</h1>
     <main id="Authors-Books-list" class="container">
-
         <div class="book-cards-container">
-            <!-- Book cards will be dynamically inserted here -->
         </div>
+
     </main>
+
+    <div class="modal fade" id="actionModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Action Modal</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="modalContent">Details will be displayed here.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="../Js/ajaxCalls.js"></script>
     <script src="../Js/AuthorBooks.js"></script>
