--- a/BooksClient/Html/AuthorsPage.html
+++ b/BooksClient/Html/AuthorsPage.html
@@ -5,14 +5,16 @@
     <title>Authors</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="../Css/AuthorDesign.css" rel="stylesheet">
+    <link href="../Css/PrevNav.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <button id="GoHomeBtn" class="btn btn-primary">Home</button>
-
+    <div style=" display:flex; justify-content:space-between; flex-direction:row;">
+        <h1>Hello</h1>
+        <a class="goBackButton" href="index.html">Go back</a>
+    </div>
     <main id="Authors-list" class="container"></main>
 
-    <!-- Modal -->
     <div class="modal fade " id="authorModal" tabindex="-1" aria-labelledby="authorModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered ">
             <div class="modal-content col-xs-12 col-md-6 col-lg-2">
@@ -32,9 +34,9 @@
         </div>
     </div>
     <div class="movingPages">
-        <button id="prevPageBtn" class="btn btn-secondary">Previous</button>
+        <button id="prevPageBtn" class="btn btn-primary">Previous</button>
         <span id="numOfPages">Page 1</span>
-        <button id="nextPageBtn" class="btn btn-secondary">Next</button>
+        <button id="nextPageBtn" class="btn btn-primary">Next</button>
     </div>
     <script src="../Js/ajaxCalls.js"></script>
     <script src="../Js/Authors.js"></script>
